Fix alignment

--- a/style.css
+++ b/style.css
@@ -2,12 +2,17 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color:black;
     padding: 0px 60px 0px 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 h1{
     color:gray; 
     font-family: Verdana;
 }
 .app {
+    width: 500px;
     padding: 20px 10px 10px 30px;
     background-color: white;
     border-radius: 25px;
